--- a/app/src/main/res/layout/sample_show_user.xml
+++ b/app/src/main/res/layout/sample_show_user.xml
@@ -25,7 +25,7 @@
             android:id="@+id/userNameList"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:text="Rohan kumar"
+            android:text="Lee"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
