--- a/app/src/main/res/layout/sample_reciever.xml
+++ b/app/src/main/res/layout/sample_reciever.xml
@@ -6,7 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="5dp"
+    android:layout_marginStart="8dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="4dp"
     android:layout_marginRight="7dp"
@@ -14,26 +14,56 @@
     android:maxWidth="310dp"
     android:maxHeight="400dp"
     android:minHeight="30dp"
+    android:padding="4dp"
+
 
     >
 
     <!-- 메시지 창에 메시지 표시-->
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/image_message_profile"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="@id/guideline2"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/avatar"/>
+
+    <TextView
+        android:id="@+id/text_message_name"
+        android:text="John Doe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="@color/black"
+        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="4dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/receiverText"
-        android:layout_margin="8dp"
         android:inputType="textLongMessage|textMultiLine"
         android:maxWidth="270dp"
         android:minWidth="50dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/receiverTime"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        />
+        android:padding="8dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/text_message_name"
+        app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
+        android:layout_marginLeft="8dp"
 
+
+        />
+    <!--    android:layout_margin="8dp"-->
+    <!--    app:layout_constraintLeft_toRightOf="@+id/image_message_profile"-->
+    <!--    app:layout_constraintBottom_toTopOf="@+id/receiverTime"-->
+    <!--    app:layout_constraintEnd_toEndOf="parent"-->
+    <!--    app:layout_constraintStart_toStartOf="@+id/guideline2"-->
+    <!--    app:layout_constraintTop_toTopOf="parent"-->
+    <!--    app:layout_constraintVertical_bias="1.0"-->
     <!-- 메시지 창의 밑에 시간표시 -->
     <TextView
         android:layout_width="wrap_content"
@@ -45,8 +75,9 @@
         android:layout_marginBottom="3dp"
         android:text="12:56 pm"
         android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginLeft="4dp"
+        app:layout_constraintLeft_toLeftOf="@id/guideline2"
+        app:layout_constraintBottom_toBottomOf="@+id/receiverText"
 
         />
     <!-- 메시지 창의 크기 옆의 가이드 라인 -->
