--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,4 +9,9 @@
     <item android:id="@+id/logout"
         android:title="로그아웃"/>
 
+    <item
+        android:id="@+id/main_find_friends_option"
+        android:title="친구 찾기" />
+
+
 </menu>
