--- a/app/src/main/res/layout/activity_group_chat.xml
+++ b/app/src/main/res/layout/activity_group_chat.xml
@@ -8,14 +8,28 @@
     android:background="#C5E1DE"
     >
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--<androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="3dp"
-        android:layout_below="@+id/toolbar"
-        android:id="@+id/chatRecyclerView"
         android:layout_above="@+id/linear"
-        />
+        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="3dp" />-->
+    <ListView
+        android:id="@+id/group_chat_text_display"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="50dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:listSelector="@android:color/transparent"
+        android:padding="0dp"
+        android:textAllCaps="false"
+        android:textColor="@android:color/background_dark"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +64,7 @@
             android:inputType="textPersonName"
             android:padding="10dp"/>
 
-        <ImageView
+        <ImageButton
             android:layout_width="55dp"
             android:layout_height="50dp"
             android:id="@+id/send"
@@ -100,19 +114,6 @@
                 app:layout_constraintStart_toEndOf="@+id/backArrow"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:text="Username"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/profile_image"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <!--            <ImageView-->
             <!--                android:id="@+id/imageView4"-->
             <!--                android:layout_width="wrap_content"-->
@@ -135,6 +136,19 @@
             <!--                app:layout_constraintTop_toTopOf="parent"-->
             <!--                app:srcCompat="@drawable/videocall" />-->
 
+
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="Username"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/profile_image"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.523" />
 
             <ImageView
                 android:id="@+id/imageView6"
