--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -117,7 +117,7 @@
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
             />
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -180,7 +180,7 @@
                 android:textStyle="bold"/>
 
 
-        </LinearLayout>
+        </LinearLayout>-->
 
     </LinearLayout>
 
