--- a/app/src/main/res/layout/sample_group_fragment.xml
+++ b/app/src/main/res/layout/sample_group_fragment.xml
@@ -7,15 +7,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#CFFFE5">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/users_profile_image"
+        <ImageView
+            android:id="@+id/group_profile_image"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginRight="15dp"
-            android:src="@drawable/avatar" />
+            android:src="@drawable/group_avatar" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,10 +30,10 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/users_profile_name"
+                    android:id="@+id/group_profile_name"
                     android:layout_width="200dp"
                     android:layout_height="match_parent"
-                    android:text="user name"
+                    android:text="Group name"
                     android:textAlignment="textStart"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -40,7 +42,7 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/users_status"
+                android:id="@+id/group_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="친구를 추가하시려면 탭 하세요"
@@ -52,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <Button
-                    android:id="@+id/requests_accept_btn"
+                    android:id="@+id/groupchat_accept_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:background="@color/myung1"
@@ -62,23 +64,30 @@
                     android:visibility="invisible"/>
 
                 <Button
-                    android:id="@+id/requests_cancel_btn"
+                    android:id="@+id/timetable_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginStart="15dp"
-                    android:background="@android:color/holo_red_dark"
+                    android:background="#FFC0CB"
                     android:textColor="@android:color/background_light"
                     android:text="Cancel"
                     android:textAllCaps="false"
                     android:textSize="16sp"
                     android:visibility="invisible"/>
 
-                <ImageView
-                    android:id="@+id/user_online_status"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/online" />
+                <Button
+                    android:id="@+id/white_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="15dp"
+                    android:background="#8977AD"
+                    android:textColor="@android:color/background_light"
+                    android:text="Cancel"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    android:visibility="invisible"/>
+
+
             </LinearLayout>
 
 
