--- a/app/src/main/res/layout/sample_reciever.xml
+++ b/app/src/main/res/layout/sample_reciever.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/receiverTime"
-
+        android:textColor="#606060"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="3dp"
