--- a/app/src/main/res/layout/sample_sender.xml
+++ b/app/src/main/res/layout/sample_sender.xml
@@ -51,7 +51,7 @@
             android:id="@+id/senderTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:textColor="#606060"
             android:layout_marginEnd="4dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="3dp"
