--- a/app/src/main/res/layout/sample_group_fragment.xml
+++ b/app/src/main/res/layout/sample_group_fragment.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/group_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="친구를 추가하시려면 탭 하세요"
+                android:text=""
                 android:textAlignment="textStart"
                 android:textSize="16sp" />
 
@@ -58,10 +58,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:background="@color/myung1"
-                    android:text="Accept"
+                    android:text="chat"
                     android:textAllCaps="false"
                     android:textSize="16sp"
-                    android:visibility="invisible"/>
+                    android:visibility="visible"/>
 
                 <Button
                     android:id="@+id/timetable_btn"
@@ -70,10 +70,10 @@
                     android:layout_marginStart="15dp"
                     android:background="#FFC0CB"
                     android:textColor="@android:color/background_light"
-                    android:text="Cancel"
+                    android:text="timetable"
                     android:textAllCaps="false"
                     android:textSize="16sp"
-                    android:visibility="invisible"/>
+                    android:visibility="visible"/>
 
                 <Button
                     android:id="@+id/white_btn"
@@ -82,10 +82,10 @@
                     android:layout_marginStart="15dp"
                     android:background="#8977AD"
                     android:textColor="@android:color/background_light"
-                    android:text="Cancel"
+                    android:text="et"
                     android:textAllCaps="false"
                     android:textSize="16sp"
-                    android:visibility="invisible"/>
+                    android:visibility="visible"/>
 
 
             </LinearLayout>
